--- a/Switch View Controller Based On UserDefaults/Base.lproj/Main.storyboard
+++ b/Switch View Controller Based On UserDefaults/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="AB9-mj-gdu">
-    <device id="retina6_5" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,17 +13,17 @@
             <objects>
                 <viewController storyboardIdentifier="SetupViewController" id="FlA-d2-AaP" customClass="SetupViewController" customModule="Switch_View_Controller_Based_On_UserDefaults" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="PcQ-Nq-e6x">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1st Screen, Press button to go to next view to finish setup" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xqK-J7-WEO">
-                                <rect key="frame" x="39" y="365" width="337" height="40.666666666666686"/>
+                                <rect key="frame" x="16" y="44" width="343" height="41"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6BZ-EQ-HAZ">
-                                <rect key="frame" x="151" y="433" width="113" height="30"/>
+                                <rect key="frame" x="16" y="93" width="343" height="30"/>
                                 <state key="normal" title="Go To Next View"/>
                                 <connections>
                                     <segue destination="bsm-3J-dWT" kind="show" id="469-Yl-ANj"/>
@@ -33,31 +33,30 @@
                         <viewLayoutGuide key="safeArea" id="ZOy-b8-iDx"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6BZ-EQ-HAZ" firstAttribute="top" secondItem="xqK-J7-WEO" secondAttribute="bottom" constant="27.329999999999998" id="5Pq-9b-s7m"/>
-                            <constraint firstItem="xqK-J7-WEO" firstAttribute="top" secondItem="ZOy-b8-iDx" secondAttribute="top" constant="277" id="73Q-FD-UPC"/>
-                            <constraint firstItem="6BZ-EQ-HAZ" firstAttribute="leading" secondItem="ZOy-b8-iDx" secondAttribute="leading" constant="151" id="J6I-Wm-YG9"/>
-                            <constraint firstItem="ZOy-b8-iDx" firstAttribute="bottom" secondItem="6BZ-EQ-HAZ" secondAttribute="bottom" constant="399" id="MOg-Jy-Uc1"/>
-                            <constraint firstItem="xqK-J7-WEO" firstAttribute="leading" secondItem="ZOy-b8-iDx" secondAttribute="leading" constant="39" id="dXb-Al-7VD"/>
-                            <constraint firstItem="ZOy-b8-iDx" firstAttribute="trailing" secondItem="xqK-J7-WEO" secondAttribute="trailing" constant="38" id="m2R-vC-41s"/>
-                            <constraint firstItem="ZOy-b8-iDx" firstAttribute="trailing" secondItem="6BZ-EQ-HAZ" secondAttribute="trailing" constant="150" id="zzb-Tx-OUi"/>
+                            <constraint firstItem="ZOy-b8-iDx" firstAttribute="trailing" secondItem="6BZ-EQ-HAZ" secondAttribute="trailing" constant="16" id="7hv-BQ-njs"/>
+                            <constraint firstItem="xqK-J7-WEO" firstAttribute="top" secondItem="ZOy-b8-iDx" secondAttribute="top" id="NuJ-Ih-9mP"/>
+                            <constraint firstItem="6BZ-EQ-HAZ" firstAttribute="leading" secondItem="ZOy-b8-iDx" secondAttribute="leading" constant="16" id="el3-fp-b9Y"/>
+                            <constraint firstItem="ZOy-b8-iDx" firstAttribute="trailing" secondItem="xqK-J7-WEO" secondAttribute="trailing" constant="16" id="ja4-Ut-NRK"/>
+                            <constraint firstItem="6BZ-EQ-HAZ" firstAttribute="top" secondItem="xqK-J7-WEO" secondAttribute="bottom" constant="8" symbolic="YES" id="oNT-g5-sa5"/>
+                            <constraint firstItem="xqK-J7-WEO" firstAttribute="leading" secondItem="ZOy-b8-iDx" secondAttribute="leading" constant="16" id="vE8-cQ-Yzd"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="1st Screen (2nd Navigation Controller)" id="vaO-ub-hU4"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WE1-i5-VfJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1051" y="790"/>
+            <point key="canvasLocation" x="1050.4000000000001" y="789.35532233883066"/>
         </scene>
         <!--Finish Setup-->
         <scene sceneID="nAk-wy-gv9">
             <objects>
                 <viewController id="bsm-3J-dWT" customClass="FinishSetup" customModule="Switch_View_Controller_Based_On_UserDefaults" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Qmx-6I-j7S">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1CX-Fm-4Ym">
-                                <rect key="frame" x="134" y="433" width="147" height="30"/>
+                                <rect key="frame" x="16" y="44" width="343" height="30"/>
                                 <state key="normal" title="Press To Finish Setup"/>
                                 <connections>
                                     <action selector="onFinishSetup:" destination="bsm-3J-dWT" eventType="touchUpInside" id="b6b-4Q-OqP"/>
@@ -67,40 +66,33 @@
                         <viewLayoutGuide key="safeArea" id="7Pe-p5-3i9"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="7Pe-p5-3i9" firstAttribute="bottom" secondItem="1CX-Fm-4Ym" secondAttribute="bottom" constant="399" id="DYM-W3-GFK"/>
-                            <constraint firstItem="7Pe-p5-3i9" firstAttribute="trailing" secondItem="1CX-Fm-4Ym" secondAttribute="trailing" constant="133" id="Z3p-ft-iSg"/>
-                            <constraint firstItem="1CX-Fm-4Ym" firstAttribute="leading" secondItem="7Pe-p5-3i9" secondAttribute="leading" constant="134" id="ZTP-aP-lz1"/>
-                            <constraint firstItem="1CX-Fm-4Ym" firstAttribute="top" secondItem="7Pe-p5-3i9" secondAttribute="top" constant="345" id="jN8-1E-sSO"/>
+                            <constraint firstItem="1CX-Fm-4Ym" firstAttribute="leading" secondItem="7Pe-p5-3i9" secondAttribute="leading" constant="16" id="4zU-EI-QIl"/>
+                            <constraint firstItem="7Pe-p5-3i9" firstAttribute="trailing" secondItem="1CX-Fm-4Ym" secondAttribute="trailing" constant="16" id="MXJ-Ah-Iso"/>
+                            <constraint firstItem="1CX-Fm-4Ym" firstAttribute="top" secondItem="7Pe-p5-3i9" secondAttribute="top" id="XXx-6x-XDa"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="3dX-c0-Ogi"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DKS-C1-zg9" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1854" y="790"/>
+            <point key="canvasLocation" x="1853.5999999999999" y="789.35532233883066"/>
         </scene>
         <!--1st Screen (1st Navigation Controller)-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="Switch_View_Controller_Based_On_UserDefaults" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1st Screen (After Setup), Press the button to go to the next view to reset the setup" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X0f-LY-Npf">
-                                <rect key="frame" x="69" y="327" width="276" height="136"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="X0f-LY-Npf" secondAttribute="height" multiplier="69:34" id="6r7-jU-3xE"/>
-                                </constraints>
+                                <rect key="frame" x="16" y="44" width="343" height="72"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nfm-An-aFi">
-                                <rect key="frame" x="151" y="489" width="113" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="nfm-An-aFi" secondAttribute="height" multiplier="113:30" id="DLi-qZ-96e"/>
-                                </constraints>
+                                <rect key="frame" x="16" y="124" width="343" height="30"/>
                                 <state key="normal" title="Go To Next View"/>
                                 <connections>
                                     <segue destination="alC-XJ-1Sf" kind="show" id="orK-Cw-Xt9"/>
@@ -110,33 +102,30 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="X0f-LY-Npf" secondAttribute="trailing" constant="69" id="0fg-bY-hU7"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="nfm-An-aFi" secondAttribute="bottom" constant="343" id="BfL-ZF-pWS"/>
-                            <constraint firstItem="nfm-An-aFi" firstAttribute="top" secondItem="X0f-LY-Npf" secondAttribute="bottom" constant="26" id="JC7-Wr-L1F"/>
-                            <constraint firstItem="nfm-An-aFi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="151" id="XjA-1O-agw"/>
-                            <constraint firstItem="X0f-LY-Npf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="239" id="ahy-DJ-a7d"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nfm-An-aFi" secondAttribute="trailing" constant="150" id="hik-qz-hgr"/>
-                            <constraint firstItem="nfm-An-aFi" firstAttribute="top" secondItem="X0f-LY-Npf" secondAttribute="bottom" constant="26" id="j4W-UB-zRE"/>
-                            <constraint firstItem="X0f-LY-Npf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="69" id="pbp-Yn-91I"/>
+                            <constraint firstItem="X0f-LY-Npf" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="0cb-Vj-qkY"/>
+                            <constraint firstItem="nfm-An-aFi" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="93R-xC-QC2"/>
+                            <constraint firstItem="X0f-LY-Npf" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="JLX-rV-u0v"/>
+                            <constraint firstItem="nfm-An-aFi" firstAttribute="top" secondItem="X0f-LY-Npf" secondAttribute="bottom" constant="8" symbolic="YES" id="Jre-Om-aZN"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="nfm-An-aFi" secondAttribute="trailing" constant="16" id="Ycz-Du-Zpi"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="X0f-LY-Npf" secondAttribute="trailing" constant="16" id="krF-rg-jCw"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="1st Screen (1st Navigation Controller)" id="ogZ-lC-3sa"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1050.7246376811595" y="138.61607142857142"/>
+            <point key="canvasLocation" x="1050.4000000000001" y="138.0809595202399"/>
         </scene>
         <!--Reset Setup-->
         <scene sceneID="qlu-aR-Yxa">
             <objects>
                 <viewController id="alC-XJ-1Sf" customClass="ResetSetup" customModule="Switch_View_Controller_Based_On_UserDefaults" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="oYz-Fj-KoE">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kap-ol-gF3">
-                                <rect key="frame" x="165" y="433" width="84" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kap-ol-gF3">
+                                <rect key="frame" x="16" y="44" width="343" height="30"/>
                                 <state key="normal" title="Reset Setup"/>
                                 <connections>
                                     <action selector="onClickResetSetup:" destination="alC-XJ-1Sf" eventType="touchUpInside" id="QYS-Xy-cRr"/>
@@ -145,12 +134,17 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="IZb-j0-TxZ"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Kap-ol-gF3" firstAttribute="top" secondItem="IZb-j0-TxZ" secondAttribute="top" id="2t6-3r-wEv"/>
+                            <constraint firstItem="IZb-j0-TxZ" firstAttribute="trailing" secondItem="Kap-ol-gF3" secondAttribute="trailing" constant="16" id="JTo-WQ-3Wl"/>
+                            <constraint firstItem="Kap-ol-gF3" firstAttribute="leading" secondItem="IZb-j0-TxZ" secondAttribute="leading" constant="16" id="n0A-wA-pwp"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="qXt-qF-d6a"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="U8f-HZ-XKC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1854" y="139"/>
+            <point key="canvasLocation" x="1853.5999999999999" y="138.98050974512745"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="E1f-bK-NdV">
@@ -158,7 +152,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="AB9-mj-gdu" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="uRY-bD-ROi">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -176,7 +170,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="aSu-lq-rB9" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="RcB-V7-Lt5">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
